   \itemize{
      \item Use of \code{array()} with a 0-length \code{dim} argument is
      deprecated.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
      \item On Windows, starting \command{Rterm} via \command{R.exe}
      caused Ctrl-C to misbehave.  (\PR{14948})

      \item The \code{tools::latexToUtf8()} function missed conversions that
      were contained within braces.
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.15.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{source()} now uses \code{withVisible()} rather than
      \code{.Internal(eval.with.vis)}.  This sometimes alters tracebacks
      slightly.

      \item \code{install.packages("pkg_version.tgz")} on Mac OS X now
      has sanity checks that this is actually a binary package (as
      people have tried it with incorrectly named source packages).

      \item \code{splineDesign()} and \code{spline.des()} in package
      \pkg{splines} have a new option \code{sparse} which can be used
      for efficient construction of a sparse B-spline design matrix
      (\emph{via} \pkg{Matrix}).

      \item \code{norm()} now allows \code{type = "2"} (the
      \sQuote{spectral} or 2-norm) as well, mainly for didactical
      completeness.

      \item \code{pmin()} and \code{pmax())} now also work when one of
      the inputs is of length zero and others are not, returning a
      zero-length vector, analogously to, say, \code{+}.

      \item \code{colorRamp()} (and hence \code{colorRampPalette()}) now
      also works for the boundary case of just one color when the ramp is
      flat.

      \item \code{qqline()} has new optional arguments
      \code{distribution}, \code{probs} and \code{qtype}, following the
      example of \pkg{lattice}'s \code{panel.qqmathline()}.

      \item \code{.C()} gains some protection against the misuse of
      character vector arguments.  (An all too common error is to pass
      \code{character(N)}, which initializes the elements to \code{""},