@@ -676,7 +676,9 @@ get_exclude_patterns <- function()
             if(any(rdas$compress %in% c("bzip2", "xz")))
                 fixup_R_dep(pkgname, "2.10")
         } else {
-            rdas <- checkRdaFiles(ddir)
+            ## ddir need not exist if just R/sysdata.rda
+            rdas <- checkRdaFiles(Sys.glob(c(file.path(ddir, "*.rda"),
+                                             file.path(ddir, "*.RData"))))
             if(nrow(rdas)) {
                 update <- with(rdas, ASCII | compress == "none" | version < 2)
                 if(any(update)) {
